correct minor syntax errors and fix spacing for readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@ body{
   border: 4px solid rgb(155, 225, 225);
   margin: 20px;
   padding: 10px;
-  background-color:rgb(248, 248, 232)
+  background-color:rgb(248, 248, 232);
+  float: none;
 }
 
 .card-body{
@@ -27,7 +28,7 @@ img{
 
 .blue-theme{
   background-color: rgb(155, 192, 224);
-  border: rgb(224,238,250)
+  border: rgb(224,238,250);
 }
 
 .cute{
